2004-06-23  Francois Dumont  <dums@...>

  * extension of the cygwin link problem workaround for mingw32.

  * src/locale_catalog.cpp: Move of the _STLP_lock object instance 
  declaration to limit the critical section and improve performace.

  * stlport/stl/_pthread_alloc.h: fix of the pthread_allocator and
  per_thread_allocator allocate method to check for the required 
  number of element before multiplication with the size of the objects
  to instanciate.

2004-06-22  Francois Dumont  <dums@...>

  * src/locale_catalog.cpp: fix of the locale facets registration system.
  The hash container use string has key rather than char const* so that
  a copy of the facet name is stored rather than a copy of the string
  pointer that might be freed. We also extract the complete facet name
  before storing it to avoid store of facet aliases that cannot be retrieved
  at release.

2004-06-21  Francois Dumont  <dums@s...>

  * Restauration of the cygwin support (using gcc 3.3.1). Extension of the
  explore build system, workaround of a link problem when using shared
  libraries.

2004-06-13  Petr Ovtchenkov  <ptr@Island...>

	* src/c_locale_glibc/c_locale_glibc2.c:	locale_data for glibc 2.3 is differ
	from one for glibc 2.2.

2004-06-11  Francois Dumont  <dums@...>

	* test/unit: Modification of some tests to make the assertion
	clearer. Mainly add of check of the streams state before check
	of the stream content.

	* test/unit/locale_test.cpp: fix of the thousands separator which is
	0xa0 under Win32 and not a simple ' ' for the french locale.

2004-06-07  Francois Dumont  <dums@...>

	* stlport/stl/_algo.c: rollback of the sort algo implementation
	to the 4.5.3 version.

2004-06-03  Francois Dumont  <dums@...>

	* stlport/stl/pointers/README, doc/pointer_specialization.txt: move and
	rename of the doc about pointer partial template specialization feature.

	* doc/README.ecv4: Creation of a documentation about the install and use